5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1771_674.log
== TEST (2019-05-24 13:47:24) 
-- CODE:
from numpy import *

vetor = array(eval(input()))
print(size(vetor))
print(vetor[0])
print(vetor[len(vetor)-1])
print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(round((sum(vetor)/size(vetor)),2)
-- ERROR:
File "XXXX", line 11
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:48:01) 
-- CODE:
from numpy import *

vetor = array(eval(input()))
print(size(vetor))
print(vetor[0])
print(vetor[len(vetor)-1])
print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(round(2,(sum(vetor)/size(vetor))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 13:48:04) 
-- CODE:
from numpy import *

vetor = array(eval(input()))
print(size(vetor))
print(vetor[0])
print(vetor[len(vetor)-1])
print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(round(2,(sum(vetor)/size(vetor))))
-- EXECUTION TIME:
0.454998
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/674/main.py", line 10, in <module>
    print(round(2,(sum(vetor)/size(vetor))))
TypeError: 'numpy.float64' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:48:14) 
-- CODE:
from numpy import *

vetor = array(eval(input()))
print(size(vetor))
print(vetor[0])
print(vetor[len(vetor)-1])
print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(round(2,(sum(vetor)/size(vetor))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:48:43) 
-- CODE:
from numpy import *

vetor = array(eval(input()))
print(size(vetor))
print(vetor[0])
print(vetor[len(vetor)-1])
print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(round(2,(sum(vetor)/len(vetor))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:49:12) 
-- CODE:
from numpy import *

vetor = array(eval(input()))
print(size(vetor))
print(vetor[0])
print(vetor[len(vetor)-1])
print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(round((sum(vetor)/len(vetor),2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:49:44) 
-- CODE:
from numpy import *

vetor = array(eval(input()))
print(size(vetor))
print(vetor[0])
print(vetor[len(vetor)-1])
print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(round((sum(vetor)/len(vetor)),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:50:08) 
-- CODE:
from numpy import *

vetor = array(eval(input()))
print(size(vetor))
print(vetor[0])
print(vetor[len(vetor)-1])
print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(round(2,(sum(vetor)/len(vetor))))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 13:50:45) 
-- CODE:
from numpy import *

vetor = array(eval(input()))
print(size(vetor))
print(vetor[0])
print(vetor[len(vetor)-1])
print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(round((sum(vetor)/len(vetor)),2))
-- EXECUTION TIME:
0.556029
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
